# ferrite

./: CLAUDE.md  README.md
ferrite-contest-log/: pnpm-lock.yaml
ferrite-contest-log/src/: App.tsx
ferrite-contest-log/src-tauri/: Cargo.toml  tauri.conf.json
ferrite-log/: package.json  pnpm-lock.yaml  vite.config.ts
ferrite-log/src-tauri/src/: main.rs
web-log-backend/: Cargo.toml  build.rs
web-log-backend/proto/: buf.yaml  hello.proto
web-log-backend/src/: main.rs
web-log-frontend/: buf.gen.yaml  components.json  index.html  package.json  pnpm-lock.yaml
web-log-frontend/src/: App.tsx  index.css
web-log-frontend/src/components/: hello-rpc-demo.tsx  layout.tsx  navbar.tsx  theme-provider.tsx  theme-toggle.tsx
web-log-frontend/src/hooks/: connect-query-hooks.ts  use-hello-query.ts
web-log-frontend/src/lib/: README.md  query-client.ts  rpc-client.ts
web-log-frontend/src/pages/: contacts.tsx  dashboard.tsx  log.tsx  login.tsx  signup.tsx
web-log-frontend/src/types/: log.ts
web-nanovna-swr-analyser/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  sample-20m-antenna.s1p  sample-multiband.s1p  standalone.html  tsconfig.json  vite.config.ts
web-nanovna-swr-analyser/src/: index.tsx  main.tsx
web-nanovna-swr-analyser/src/components/: FileUpload.tsx  NanoVNASWRAnalyser.tsx  SWRChart.tsx  SWRFullRangeChart.tsx
web-nanovna-swr-analyser/src/lib/: sparamParser.ts  swrCalculator.ts
web-nanovna-swr-analyser/src/types/: index.ts
